# domain-finder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  domain.py  pyproject.toml  requirements.txt  setup.cfg  style.css  table.js
.github/workflows/: ci.yml  lint.yml
domain_finder/: __init__.py  cli.py  style.css
templates/: template.html
tests/: test_domain.py  test_html.py  test_scoring.py
